--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<a href="https://www.youtube.com/watch?v=NZAi6QTNZtE">My current favourite song is Don</a>
+</div>
 </body>
 
 </html>
